--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -92,13 +92,13 @@
 				<div class="ka_prologbox">
 					<h5 class="ka_proloh5 lang" data-locale="commodity_buyway"></h5>
 					<ul class="mui-table-view">
-						<li class="mui-table-view-cell" style="text-align:center;margin-left:3%;">
+						<li class="mui-table-view-cell" style="text-align:center;margin-left:3%; margin-right: 5%;">
 							<div class="ka_userbox">
-								<div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn" style="width: 45%;"></div>
+								<div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn" style="display: none;"></div>
 								<input type="hidden" name="exchange" id="exchange" value="0" />
 								<div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_pointbuy" id="pointbuybtn" style="display: none;"></div>
 								<input type="hidden" name="business" id="business" value="0" />
-								<div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free" id="freebuybtn" style="width: 45%;"></div>
+								<div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free" id="freebuybtn" style="width: 100%;"></div>
 								<input type="hidden" name="gratis" id="gratis" value="0" />
 							</div>
 						</li>
@@ -140,9 +140,11 @@
 		//var id = event.detail.id;
 		$(".z_addImg").remove();
 		$(".mui-action-back").show();
-		$("#delete").show();
 		document.getElementById('codid').value=id;
-		getcomdinfo(id);
+		if(id){
+			$("#delete").show();
+			getcomdinfo(id);
+		}
 	});
 	window.addEventListener("refresh", function(event) {
 		location.reload();
@@ -392,6 +394,7 @@
 						var selfs = plus.webview.currentWebview();
 						var picksortid = selfs.eid;
 						//var picksortid = event.detail.id;
+					if(picksortid){
 						var param4 = {
 							"commodity_id": picksortid
 						}
@@ -456,6 +459,7 @@
 								//Api.callback_ng(data);
 							}
 				});
+			}
 			//});
 			//category click picker
 			var showCatePickerButton = doc.getElementById('showCityPicker');
