--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -204,7 +204,7 @@
 		$(function(){
 			var language=navigator.language;
 			console.log("lan"+language);
-			if(language=="zh-CN" || language=="zh-TW" || language=="zh-HK"){
+			if(language=="zh-CN" || language=="zh-cn" || language=="zh-tw" || language=="zh-hk" || language=="zh-TW" || language=="zh-HK"){
 				$("#rule_jptext").hide();
 				$("#rule_zhtext").show();
 				$("#forbiden_jptext").hide();
