--- a/kankan/pages/setting/terms.html
+++ b/kankan/pages/setting/terms.html
@@ -32,7 +32,7 @@
 			mui.init();
 			$(function(){
 			var language=navigator.language;
-			if(language=="zh-CN" || language=="zh-TW" || language=="zh-HK"){
+			if(language=="zh-CN" || language=="zh-cn" || language=="zh-tw" || language=="zh-hk" || language=="zh-TW" || language=="zh-HK"){
 				$("#rule_jptext").hide();
 				$("#rule_zhtext").show();
 			}else{
