--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -228,6 +228,7 @@
 						"transid": trans_id
 					};
 					trans_flow('transConversation', params,'',"one");
+					$("#msg").blur();
 					$("#msg").val('');
 				}
 			}
