--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -42,7 +42,7 @@
 					var trans_id=trans.trans_id;
 					var trstatus=trans.status;
 					if(trstatus=="3"){
-						var status="取引が成功する";
+						//var status="取引が成功する";
 						var status = TextMessage.transSuccess;
 					}else if(trstatus=="8"){
 						//var status="中止を請求する";
