--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
@@ -81,7 +81,7 @@
 				        </li>
 				        <li class="mui-table-view-cell">
 				         <div class="mui-pull-left lang" data-locale="version"></div> 
-				         <div class="mui-pull-right">0.0.20</div>
+				         <div class="mui-pull-right">0.0.22</div>
 				        </li>
 				    </ul>
 				</div>
@@ -204,7 +204,7 @@
 		$(function(){
 			var language=navigator.language;
 			console.log("lan"+language);
-			if(language=="zh-CN" || language=="zh-TW" || language=="zh-HK"){
+			if(language=="zh-CN" || language=="zh-cn" || language=="zh-tw" || language=="zh-hk" || language=="zh-TW" || language=="zh-HK"){
 				$("#rule_jptext").hide();
 				$("#rule_zhtext").show();
 				$("#forbiden_jptext").hide();
