--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/detail.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/detail.html
@@ -31,12 +31,12 @@
 			
 			.imgboxs {
 				width: 100%;
-				height: 320px;
+				/*height: 320px;*/
 				vertical-align: middle;
 				display: inline-block;
 				text-align: center;
 				overflow: hidden;
-				line-height: 320px;
+				/*line-height: 320px;*/
 			}
 		</style>
 	</head>
@@ -106,7 +106,7 @@
 			<h5 class="ka_h5backcolor lang comdinfo" data-locale="det_information"></h5>
 			<ul class="mui-table-view comdinfo">
 			        <li class="mui-table-view-cell">
-			            <div class="mui-pull-left ka_sorttext lang" data-locale="commodity_sorts" style="padding-top: 7%;"></div>
+			            <div class="mui-pull-left ka_sorttext lang" data-locale="commodity_sorts"></div>
 			            <div class="mui-pull-left ka_sortvale" id="comd_sortvale"></div>
 			        </li>
 			       <li class="mui-table-view-cell">
@@ -427,12 +427,13 @@
 			//message show
 			function messageshow(results) {
 				$(".mui-slider-indicator").empty();
+				var screenheight=parseInt($(window).height())*0.5;
 				var commodity = results.data;
 				var comdbasic = commodity.commodity_basic;
 				var userbasic = commodity.user_basic;
 				var comdname = HTMLDecode(comdbasic[0].comm_name);
 				var comdmesage = HTMLDecode(comdbasic[0].comm_detail).replace(/\n/g,"<br />");
-				var comoditsort=comdbasic[0].catalog_detail+"<br/><br/>"+comdbasic[0].classify_detail;
+				var comoditsort=comdbasic[0].catalog_detail+"&nbsp;<font color='#000000'>＞</font><br/>"+comdbasic[0].classify_detail;
 				var comdistate=comdbasic[0].state;
 				if(comdistate=="0"){
 					var comdistateval=TextMessage.prostaute0;
@@ -474,8 +475,8 @@
 				var la = imgsarr.length - 1 * 1;
 				if(imgsarr==""){
 					imgurl = "../../../images/nopic.jpg";
-					htmlimg += '<div class="mui-slider-item sliderimg imgboxs" align="center">';
-					htmlimg += '<img src="' + imgurl + '" style="max-height: 320px; width: auto;vertical-align:middle; onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+					htmlimg += '<div class="mui-slider-item sliderimg imgboxs" align="center" style="height:'+screenheight+'px;line-height:'+screenheight+'px;">';
+					htmlimg += '<img src="' + imgurl + '" style="max-height: '+screenheight+'px; width: auto;vertical-align:middle; onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 					htmlimg += '</div>';
 					var htmlfocus = '<div class="mui-indicator mui-active"></div>';
 					$(".mui-slider-indicator").append(htmlfocus);
@@ -491,10 +492,10 @@
 					var imgurl = imgsarr[i].url;
 					var realwidth=imgsarr[i].width;
 					var realheight=imgsarr[i].height;
-					if(realheight<320){
+					if(realheight<screenheight){
 						var biheight=realheight;
 					}else{
-						var biheight=320;
+						var biheight=screenheight;
 					}
 					var ribi=realwidth/realheight;
 					var showwidth=biheight*ribi;
@@ -506,13 +507,13 @@
 					}else{
 						//leftpx=0;
 						showwidth="auto";
-						var showheight="320px";
+						var showheight=screenheight+"px";
 					}
 					
 					if(imgsarr[i].url == "") {
 						imgurl = "../../../images/nopic.jpg";
 					}
-					htmlimg += '<div class="mui-slider-item sliderimg imgboxs" align="center">';
+					htmlimg += '<div class="mui-slider-item sliderimg imgboxs" align="center" style="height:'+screenheight+'px;line-height:'+screenheight+'px;">';
 					if(i>0){
 						htmlimg +='<div class="mui-icon mui-icon-back mui-pull-left Arrow leftarrow" onclick="goitem('+back+')"></div>';
 					}
@@ -570,6 +571,8 @@
 						$(".lanhk").show();
 					}
 				}
+				//recommend and concerned products image width
+				var recoimgheight=parseInt($(window).width())/4-16;
 				//buy way
 				var exchange = commodity.commodity_buy_way.exchange;
 				var business = commodity.commodity_buy_way.business;
@@ -614,7 +617,7 @@
 					if(j>=4){
 						recomendhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 						recomendhtml += '<a href="detail.html" id="' + recomdid + '" class="ka_imgewh">';
-						recomendhtml += '<img class="mui-media-object ka_imgewh" src="' + recomdimg + '" style="width: 95px;height: 81px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+						recomendhtml += '<img class="mui-media-object ka_imgewh" src="' + recomdimg + '" style="height: '+recoimgheight+'px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 						recomendhtml += '</a></li>';
 					}
 					var vall = k % 4;
@@ -631,7 +634,7 @@
 					if(j < 4) {
 						recomendaddfirsthtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 						recomendaddfirsthtml += '<a href="detail.html" id="' + recomdid + '" class="ka_imgewh">';
-						recomendaddfirsthtml += '<img class="mui-media-object" src="' + recomdimg + '" style="width: 95px;height: 81px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+						recomendaddfirsthtml += '<img class="mui-media-object" src="' + recomdimg + '" style="height: '+recoimgheight+'px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 						recomendaddfirsthtml += '</a></li>';
 						$("#firstremmondul").html(recomendaddfirsthtml);
 					}
@@ -667,7 +670,7 @@
 					if(l >= 4){
 						concernhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 						concernhtml += '<a href="detail.html" id="' + concernid + '" class="ka_imgewh">';
-						concernhtml += '<img class="mui-media-object" src="' + concernimg + '" style="width: 95px;height: 81px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+						concernhtml += '<img class="mui-media-object" src="' + concernimg + '" style="height: '+recoimgheight+'px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 						concernhtml += '</a></li>';
 					}
 					var vallm = m % 4;
@@ -683,7 +686,7 @@
 					if(l < 4) {
 						concernaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
 						concernaddhtml += '<a href="detail.html" id="' + concernid + '" class="ka_imgewh">';
-						concernaddhtml += '<img class="mui-media-object" src="' + concernimg + '" style="width: 95px;height: 81px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+						concernaddhtml += '<img class="mui-media-object" src="' + concernimg + '" style="height: '+recoimgheight+'px;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 						concernaddhtml += '</a></li>';
 						$("#firstconcerul").html(concernaddhtml);
 					}
