--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -81,7 +81,7 @@
 				        </li>
 				        <li class="mui-table-view-cell">
 				         <div class="mui-pull-left lang" data-locale="version"></div> 
-				         <div class="mui-pull-right">0.0.16</div>
+				         <div class="mui-pull-right" id="version"></div>
 				        </li>
 				    </ul>
 				</div>
@@ -201,6 +201,10 @@
 	<script src="../../js/common.js"></script>
 	<script>
 		mui.init();
+		mui.plusReady(function(){
+			var version = plus.runtime.version;
+			$('#version').text(version);
+		});
 		$(function(){
 			var language=navigator.language;
 			console.log("lan"+language);
